objects/Preferred_Vendor_Request__c.object
<CustomObject>
    <fields>
        <fullName>AdobeSign_Hourly_Rate__c</fullName>
        <formula>IF(!ISBLANK(Hourly_Rate__c) &amp;&amp; !ISPICKVAL(Rate_Type_Override__c,"Flat Rate Override"), "$"&amp;TEXT(Hourly_Rate__c)&amp;"/hr", "N/A")</formula>
        <label>AdobeSign Hourly Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_Start_Date__c</fullName>
        <label>Anticipated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>HYPERLINK("/" &amp; PICO_ID__r.TASKRAY__trAccount__r.Id, PICO_ID__r.TASKRAY__trAccount__r.Name)</formula>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_Work__c</fullName>
        <label>Description of Work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Auto_Send_SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Auto-Send SOW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Hours_to_Complete__c</fullName>
        <inlineHelpText>Please only specify estimated hours for non-flat rate projects</inlineHelpText>
        <label>Est. Hours to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flat_Rate__c</fullName>
        <inlineHelpText>Please specify a flat rate if the Preferred Vendor is on a flat rate or if you specify a Flat Rate Override.</inlineHelpText>
        <label>Flat Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_Override__c</fullName>
        <inlineHelpText>Specify amount for hourly rate override when vendor rate type is flat and you have selected Rate Type Override to be Hourly Rate Override.</inlineHelpText>
        <label>Hourly Rate Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>PICO_ID__r.TASKRAY__trOpportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>HYPERLINK("/" &amp;  PICO_ID__r.TASKRAY__trOpportunity__r.Id , PICO_ID__r.TASKRAY__trOpportunity__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason_s_for_Outsourcing__c</fullName>
        <label>Other Reason(s) for Outsourcing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_No__c</fullName>
        <label>PO No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Vendor_Email__c</fullName>
        <formula>Preferred_Vendor__r.Email__c</formula>
        <label>Preferred Vendor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Vendor_Phone__c</fullName>
        <formula>Preferred_Vendor__r.Phone__c</formula>
        <label>Preferred Vendor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Vendor</label>
        <referenceTo>Preferred_Vendor__c</referenceTo>
        <relationshipLabel>Preferred Vendor Requests</relationshipLabel>
        <relationshipName>Preferred_Vendor_Requests_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Due_Date__c</fullName>
        <label>Project Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Type_Override__c</fullName>
        <label>Rate Type Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly Rate Override</fullName>
                </value>
                <value>
                    <fullName>Flat Rate Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <formula>TEXT( Preferred_Vendor__r.Rate_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_s_for_Outsourcing__c</fullName>
        <label>Reason(s) for Outsourcing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External expertise required</fullName>
                </value>
                <value>
                    <fullName>Internal resource contraints</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_Email_Address__c</fullName>
        <formula>CreatedBy.Email</formula>
        <label>Requester Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <formula>HYPERLINK( "/" &amp; CreatedBy.Id, CreatedBy.FirstName &amp; " " &amp; CreatedBy.LastName)</formula>
        <label>Requester Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFID__c</fullName>
        <formula>HYPERLINK("/" &amp;  PICO_ID__r.TASKRAY__trOpportunity__c ,  PICO_ID__r.Opportunity_ID__c )</formula>
        <label>SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Approval Process</fullName>
                </value>
                <value>
                    <fullName>PO No. Requested</fullName>
                </value>
                <value>
                    <fullName>Submitted for Final Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdobeSign_Estimated_Hours__c</fullName>
        <formula>IF( ( ISPICKVAL(Preferred_Vendor__r.Rate_Type__c, "Flat Rate") || ISPICKVAL(Rate_Type_Override__c,"Flat Rate Override") ) &amp;&amp; !ISPICKVAL(Rate_Type_Override__c,"Hourly Rate Override"), "N/A", TEXT(Est_Hours_to_Complete__c))</formula>
        <label>AdobeSign Estimated Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdobeSign_Total_Estimated_Fees__c</fullName>
        <formula>CASE(LEN( TEXT(Total_Estimated_Fees__c) ),
1, "$" &amp; TEXT(Total_Estimated_Fees__c),
2, "$" &amp; TEXT(Total_Estimated_Fees__c),
3, "$" &amp; TEXT(Total_Estimated_Fees__c),
4, "$" &amp; LEFT(TEXT(Total_Estimated_Fees__c), 1) &amp; "," &amp; RIGHT(TEXT(Total_Estimated_Fees__c), 3),
5, "$" &amp; LEFT(TEXT(Total_Estimated_Fees__c), 2) &amp; "," &amp; RIGHT(TEXT(Total_Estimated_Fees__c), 3),
6, "$" &amp; LEFT(TEXT(Total_Estimated_Fees__c), 3) &amp; "," &amp; RIGHT(TEXT(Total_Estimated_Fees__c), 3),
7, "$" &amp; LEFT(TEXT(Total_Estimated_Fees__c), 1) &amp; "," &amp; MID(TEXT(Total_Estimated_Fees__c), 2,3) &amp; "," &amp; RIGHT(TEXT(Total_Estimated_Fees__c), 3),
null)</formula>
        <label>AdobeSign Total Estimated Fees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE_Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRE Point of Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This user is not an authorized DRE Point of Contact.</errorMessage>
            <filterItems>
                <field>User.DRE_Point_of_Contact__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Preferred_Vendor_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <inlineHelpText>Preferred Vendor Request PO Number to be issued by DRE finance.</inlineHelpText>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Consultant__c</fullName>
        <formula>PICO_ID__r.Principal_Scientist__r.FirstName &amp; " " &amp; PICO_ID__r.Principal_Scientist__r.LastName</formula>
        <label>Principal Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Preferred Vendor Requests</relationshipLabel>
        <relationshipName>Preferred_Vendor_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>PICO_ID__r.Extraction_TL__r.FirstName &amp; " " &amp;  PICO_ID__r.Extraction_TL__r.LastName</formula>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Project_Name__c</fullName>
        <formula>PICO_ID__r.Secondary_Project_Name__c</formula>
        <label>Secondary Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Fees__c</fullName>
        <formula>IF( ( ISPICKVAL(Preferred_Vendor__r.Rate_Type__c, "Hourly Rate") || ISPICKVAL(Rate_Type_Override__c, "Hourly Rate Override") ) &amp;&amp; !ISPICKVAL(Rate_Type_Override__c, "Flat Rate Override"), Est_Hours_to_Complete__c * Hourly_Rate__c ,  Flat_Rate__c )</formula>
        <label>Total Estimated Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PICO_ID__c</fullName>
        <label>PICO ID</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>Preferred Vendor Requests</relationshipLabel>
        <relationshipName>Preferred_Vendor_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Preferred Vendor Request</label>
    <nameField>
        <displayFormat>PVR-{000000}</displayFormat>
        <label>Preferred Vendor Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferred Vendor Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SFID__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>PICO_ID__c</columns>
        <columns>Preferred_Vendor__c</columns>
        <columns>DRE_Point_of_Contact__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Require_Flat_Rate</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
    ISPICKVAL(Preferred_Vendor__r.Rate_Type__c, "Flat Rate")&amp;&amp;
ISBLANK(Flat_Rate__c),true,
    IF(ISPICKVAL(Rate_Type_Override__c, "Flat Rate Override") &amp;&amp;ISBLANK(Flat_Rate__c),true,false)
)</errorConditionFormula>
        <errorDisplayField>Flat_Rate__c</errorDisplayField>
        <errorMessage>This preferred vendor is on a flat project rate. Please specify the flat project rate for this request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Hourly_Rate_Override</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Rate_Type_Override__c, "Hourly Rate Override") &amp;&amp; ISBLANK( Hourly_Rate_Override__c)</errorConditionFormula>
        <errorDisplayField>Hourly_Rate_Override__c</errorDisplayField>
        <errorMessage>You must specify the hourly rate for this override.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Other_Reason_for_Outsourcing</fullName>
        <active>true</active>
        <errorConditionFormula>INCLUDES(Reason_s_for_Outsourcing__c,"Other")&amp;&amp; ISBLANK(Other_Reason_s_for_Outsourcing__c)</errorConditionFormula>
        <errorDisplayField>Other_Reason_s_for_Outsourcing__c</errorDisplayField>
        <errorMessage>You must provide a description of your other reason for outsourcing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Estimated_Hours_to_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
    ISPICKVAL(  Rate_Type_Override__c, "Flat Rate Override")&amp;&amp;!ISBLANK( Est_Hours_to_Complete__c ),
    true,
    IF(
        ISPICKVAL( Preferred_Vendor__r.Rate_Type__c, "Flat Rate") &amp;&amp; !ISBLANK( Est_Hours_to_Complete__c ),
        true, false
    )
)</errorConditionFormula>
        <errorDisplayField>Est_Hours_to_Complete__c</errorDisplayField>
        <errorMessage>The preferred vendor is on an flat rate. The estimated number of hours to complete is not relevant. Please leave this blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Flat_Rate</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Preferred_Vendor__r.Rate_Type__c, "Hourly Rate")&amp;&amp; !ISPICKVAL(  Rate_Type_Override__c, "Flat Rate Override")&amp;&amp;
!ISBLANK(Flat_Rate__c)</errorConditionFormula>
        <errorDisplayField>Flat_Rate__c</errorDisplayField>
        <errorMessage>This vendor is on an hourly rate. You cannot specify a flat rate for this request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Estimate_Hours_to_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
   ISPICKVAL( Preferred_Vendor__r.Rate_Type__c, "Hourly Rate")&amp;&amp;ISBLANK( Est_Hours_to_Complete__c ) &amp;&amp; !ISPICKVAL( Rate_Type_Override__c, "Flat Rate Override"),true,
   IF(ISPICKVAL( Rate_Type_Override__c, "Hourly Rate Override") &amp;&amp; ISBLANK( Est_Hours_to_Complete__c ),true,false)
)</errorConditionFormula>
        <errorDisplayField>Est_Hours_to_Complete__c</errorDisplayField>
        <errorMessage>The preferred vendor is on an hourly rate. You must specify an estimated number of hours to complete.</errorMessage>
    </validationRules>
</CustomObject>